<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mn_menu"
        android:title="Menu" />
    <group android:id="@+id/gr_00">
        <item
            android:id="@+id/mn_add"
            android:title="@string/add_xml_0" />
        <item
            android:id="@+id/mn_edit"
            android:title="@string/edit_xml_0" />
        <item
            android:id="@+id/mn_delete"
            android:title="@string/delete_xml_0" />
    </group>
    <group android:id="@+id/gr_01">
        <item
            android:id="@+id/mn_copy_xml_1"
            android:orderInCategory="1"
            android:title="@string/copy_xml_1" />
        <item
            android:id="@+id/mn_paste_xml_1"
            android:orderInCategory="2"
            android:title="@string/paste_xml_1" />
        <item
            android:id="@+id/mn_exit_xml_1"
            android:orderInCategory="4"
            android:title="@string/exit_xml_1" />
    </group>
    <group android:id="@+id/gr_02">
        <item
            android:id="@+id/mn_share_xml_2"
            android:orderInCategory="5"
            android:title="@string/share_xml_2" />
        <item
            android:id="@+id/mn_post_xml_2"
            android:orderInCategory="6"
            android:title="@string/post_xml_2" />
        <item
            android:id="@+id/mn_send_xml_2"
            android:orderInCategory="7"
            android:title="@string/send_xml_2" />
    </group>

</menu>